--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,9 @@
     <name>tsf-demo</name>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.7.RELEASE</version>
-        <relativePath />
+        <groupId>com.tencent.tsf</groupId>
+        <artifactId>spring-cloud-tsf-dependencies</artifactId>
+        <version>1.22.0-Finchley-RELEASE</version>
     </parent>
 
     <properties>
@@ -24,10 +23,12 @@
     </properties>
 
     <dependencies>
+        <!-- TSF 启动器 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>com.tencent.tsf</groupId>
+            <artifactId>spring-cloud-tsf-starter</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
