--- a/provider-demo/pom.xml
+++ b/provider-demo/pom.xml
@@ -6,20 +6,15 @@
         <groupId>org.xiaolyuh.tsf</groupId>
         <artifactId>tsf-demo</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>provider-demo</artifactId>
     <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
     <name>provider-demo</name>
     <description>服务提供者</description>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
