--- a/consumer-demo/pom.xml
+++ b/consumer-demo/pom.xml
@@ -8,11 +8,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>provider-demo</artifactId>
+    <artifactId>consumer-demo</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>provider-demo</name>
-    <description>服务提供者</description>
+    <name>consumer-demo</name>
+    <description>服务消费者</description>
 
     <dependencies>
         <dependency>
@@ -30,4 +29,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
